# td-smart-ppt

./: .gitignore  README.md  ppt_generation_sequence_diagram.md
backend/: nohup.out  presontation.json  pyproject.toml
backend/app/: llm.py  main.py  templates.py
backend/app/agents/: chatbot.py  outline.py  slide_content.py  structure.py  temp_gen_prompt.py  template_gen_agent.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: chat.py  files.py  outline.py  outlines.py  presentation.py
backend/app/core/: config.py
backend/app_data/exports/: 1fa13aab-da86-4cf7-b7ad-8dfa5dfba2b1.pptx  3450d641-9610-4870-b731-2c8a789624e5.pptx  80d5192e-b077-4968-b0df-cb2b4929e5da.pptx  eb7a5647-7c99-450a-ac20-4de41a706bf6.pptx  ee8cb317-8b16-4272-aaf8-3de621a0477d.pptx
backend/chroma/a0bf71c5-399d-4496-b427-9bdc8988a142/: index_metadata.pickle
backend/models/: presentation_with_slides.py
backend/models/sql/: image_asset.py  presentation.py
backend/services/: image_generation_service.py  temp_file_service.py
backend/utils/: ai_search.py  image_provider.py
frontend/: .gitignore  demo-bundle.js  next.config.mjs  package.json  tailwind.config.ts  tsconfig.node.json
frontend/app/: ConfigurationInitializer.tsx  layout.tsx
frontend/app_data/exports/: b83b712f-4f70-4782-ba83-0d89728aa5eb.pptx  d3752979-f6aa-410e-a546-85ec62428e09.pptx
frontend/components/: Home.tsx  LLMSelection.tsx
frontend/presentation-templates/general/: BasicInfoSlideLayout.tsx  BulletIconsOnlySlideLayout.tsx  BulletWithIconsSlideLayout.tsx  ChartWithBulletsSlideLayout.tsx  IntroSlideLayout.tsx  (+8 more)
frontend/utils/: mixpanel.ts
(+73 files in other folders)
