[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autopep8>=2.3.2",
    "fastapi>=0.117.1",
    "httpx[socks]>=0.28.1",
    "langfuse>=3.5.1",
    "pydantic-ai>=1.0.10",
    "pydantic-ai-slim[openai]>=1.0.10",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"
